--- a/HoonsWeather/OpenWeatherInfo.plist
+++ b/HoonsWeather/OpenWeatherInfo.plist
@@ -2,13 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>SchemeUserState</key>
-	<dict>
-		<key>HoonsWeather.xcscheme_^#shared#^_</key>
-		<dict>
-			<key>orderHint</key>
-			<integer>6</integer>
-		</dict>
-	</dict>
+	<key>OPENWEATHER_API_KEY</key>
+	<string>5b1ea9cdb850fd6e64033474744e8eb7</string>
 </dict>
 </plist>
